Внесены изменения в описания ячеек

--- a/Lesson_5.ipynb
+++ b/Lesson_5.ipynb
@@ -29,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "# сгенерируем данные, представляющие собой 500 объектов с 5-ю признаками\n",
+    "# сгенерируем данные, представляющие собой 100 объектов с 2-мя признаками\n",
     "classification_data, classification_labels = datasets.make_classification(n_samples=100,\n",
     "                                                      n_features = 2, n_informative = 2, \n",
     "                                                      n_classes = 2, n_redundant=0, \n",
@@ -63,7 +63,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x185d2880f28>"
+       "<matplotlib.collections.PathCollection at 0x2749b75ff98>"
       ]
      },
      "execution_count": 3,
@@ -1215,6 +1215,13 @@
    "source": [
     "Гиперплоскость имеет сложную форму. Модель хорошо подстроилась под тренировочные данные - точность 100%. При этом точность на тестовой выборке возрасла до 93%, что является неплохим результатом."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
